--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,29 +11,20 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data 777
     networks:
       - olive-network
 
   olive-server:
-    image: luxcgo/olive:latest
+    build:
+      context: ./olive-ffmpeg
+      dockerfile: Dockerfile-ffmpeg
     container_name: olive-server
     depends_on:
       - olive-db
     ports:
       - 127.0.0.1:3000:3000
       - 127.0.0.1:4000:4000
-    command:
-      [
-        "./olive",
-        "server",
-        "--db-host",
-        "olive-db:5432",
-        "-l",
-        "/downloads",
-        "-s",
-        "/downloads"
-      ]
     volumes:
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
