--- a/dockerfile.olive
+++ b/dockerfile.olive
@@ -28,8 +28,9 @@ COPY --from=build_olive /ctl/zarf/streamlink/init.sh /ctl/init.sh
 WORKDIR /ctl
 RUN mkdir -p $OUTPUT_DIR && \
 	apk update && \
-	apk --no-cache add yt-dlp zsh tzdata && \
+	apk --no-cache add yt-dlp zsh tzdata ffmpeg && \
 	sh init.sh
+RUN rm -rf /var/cache/apk/*
 ENV TZ=Asia/Shanghai
 VOLUME $OUTPUT_DIR
 CMD ["./olive"]
